# T4INF1004.1-Programmieren-1

./: README.md  probeklausur-bearbeitung.xopp
1-grundlagen/uebung-1/: CMakeLists.txt  main1.c  main2.c
1-grundlagen/vorlesung-2024-12-04/: CMakeLists.txt  main1.c  main2.c  main3.c
1-grundlagen/vorlesung-2024-12-11/: CMakeLists.txt  helper.h  main1.c  main2.c  main3.c
1-grundlagen/vorlesung-2024-12-18/: CMakeLists.txt  main1.c  main2.c  main3.c  main4.c  main5.c
2-sprachkonzepte-von-c/uebung-2/: CMakeLists.txt  main.c
2-sprachkonzepte-von-c/uebung-3/: CMakeLists.txt  main.c
2-sprachkonzepte-von-c/uebung-4/: CMakeLists.txt  main1.c  main10.c  main11.c  main12.c  main13.c  main14.c  main2.c  main3.c  main4.c  main5.c  main6.c  main7.c  main8.c  main9.c  mainextra.c
2-sprachkonzepte-von-c/vorlesung-2025-01-08/: CMakeLists.txt  main_1.c  main_2.c
2-sprachkonzepte-von-c/vorlesung-2025-01-22/: CMakeLists.txt  main1.c  main2.c  main3.c  main4  main4.c
2-sprachkonzepte-von-c/vorlesung-2025-02-05/: CMakeLists.txt  main1.c  main2.c  main3.c  main4.c  main5.c
2-sprachkonzepte-von-c/vorlesung-2025-02-18/: CMakeLists.txt  klaus.h  main.c  main2.c  main3.c  main4.c  main5.c  main6.c  mainbinaer.c  mainklausur.c
klausur/: CMakeLists.txt  bitmap.c  bitmap.h  main.c
probeprojekt-1/: CMakeLists.txt  main.c
probeprojekt-2/: CMakeLists.txt  bitmap.c  bitmap.h  main.c  out.txt  text.txt
