cmake_minimum_required(VERSION 3.30)
project(uebung_4 C)

set(CMAKE_C_STANDARD 99)

add_executable(uebung_4
        main1.c
        main2.c
        main3.c
        main4.c
        main5.c
        main6.c
        main7.c
        main8.c
        main9.c
        main10.c
        main11.c
        main12.c
        main13.c
        main14.c
        mainextra.c
)
